# solo2

./: Makefile  README.md
components/dispatch-fido/: Cargo.toml
components/dispatch-fido/src/: cbor.rs  fido.rs
components/ndef-app/: Cargo.toml
components/ndef-app/src/: ndef.rs
components/nfc-device/: Cargo.toml
components/provisioner-app/: Cargo.toml
components/provisioner-app/src/: lib.rs
components/usbd-ccid/src/: class.rs  pipe.rs
components/usbd-ccid/src/types/: packet.rs
components/usbd-ctaphid/: Cargo.toml
components/usbd-ctaphid/src/: class.rs  lib.rs  pipe.rs
runners/lpc55/: Cargo.toml  Makefile  build.rs
runners/lpc55/board/src/: clock_controller.rs  lib.rs  nfc.rs  trussed.rs
runners/lpc55/board/src/lpcxpresso55/: button.rs  led.rs
runners/lpc55/board/src/solo2/: button.rs  led.rs
runners/lpc55/board/src/traits/: buttons.rs  rgb_led.rs
runners/lpc55/src/: initializer.rs  lib.rs  main.rs  types.rs
runners/lpc55/src/initializer/: stages.rs
runners/lpc55/src/types/: usb.rs
runners/pc/: Cargo.toml
