[package]
name = "dispatch-fido"
version = "0.1.0"
authors = ["Conor Patrick <conor@solokeys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delog = "0.1.0"
heapless = "0.6"
heapless-bytes = "0.3"
interchange = "0.2.0"
serde = { version = "1", default-features = false }

apdu-dispatch = { git = "https://github.com/solokeys/apdu-dispatch" }
ctaphid-dispatch = { git = "https://github.com/solokeys/ctaphid-dispatch" }
ctap-types = { git = "https://github.com/All-Your-Locks-Are-Belong-To-Us/ctap-types", rev="a622dcd19fce2e246d69c3a8aa36f4971471b235" }
fido-authenticator = { git = "https://github.com/All-Your-Locks-Are-Belong-To-Us/fido-authenticator", rev="b99423728ba04d2efd9d31a1967b1a3dbd641bfa" }
iso7816 = { git = "https://github.com/ycrypto/iso7816" }
trussed = { git = "https://github.com/trussed-dev/trussed" }

[features]
default = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
