[package]
name = "dispatch-fido"
version = "0.1.0"
authors = ["Conor Patrick <conor@solokeys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delog = "0.1.0"
heapless = "0.6"
heapless-bytes = "0.3"
interchange = "0.2.0"
serde = { version = "1", default-features = false }

apdu-dispatch = { git = "https://github.com/solokeys/apdu-dispatch" }
ctaphid-dispatch = { git = "https://github.com/solokeys/ctaphid-dispatch" }
ctap-types = { git = "https://github.com/All-Your-Locks-Are-Belong-To-Us/ctap-types", rev = "efcc04c27beedb1c95fc2a072256b100ae2252c1" }
fido-authenticator = { git = "https://github.com/All-Your-Locks-Are-Belong-To-Us/fido-authenticator", rev = "9e85dd204e1138abe26c8df4a1364be198ee3a88" }
iso7816 = { git = "https://github.com/ycrypto/iso7816" }
trussed = { git = "https://github.com/trussed-dev/trussed" }

[features]
default = []

enable-fido-2-1-pre = ["fido-authenticator/enable-fido-2-1-pre"]

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
