[package]
name = "dispatch-fido"
version = "0.1.0"
authors = ["Conor Patrick <conor@solokeys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delog = "0.1.0"
heapless = "0.6"
heapless-bytes = "0.3"
interchange = "0.2.0"
serde = { version = "1", default-features = false }

apdu-dispatch = { git = "https://github.com/All-Your-Locks-Are-Belong-To-Us/apdu-dispatch", rev = "b50d7a8abfa83bc3136a51d5a051b70f5f437e61" }
ctaphid-dispatch = { git = "https://github.com/All-Your-Locks-Are-Belong-To-Us/ctaphid-dispatch" }
ctap-types = { git = "https://github.com/All-Your-Locks-Are-Belong-To-Us/ctap-types", rev = "03581bab46df23d8acb5fcfb8d74db6626753394" }
fido-authenticator = { git = "https://github.com/All-Your-Locks-Are-Belong-To-Us/fido-authenticator", rev = "ede8798f4735f94445babf2055d2ec9769145582" }
iso7816 = { git = "https://github.com/ycrypto/iso7816" }
trussed = { git = "https://github.com/trussed-dev/trussed" }

[features]
default = []

enable-fido-2-1 = ["fido-authenticator/enable-fido-2-1"]

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
