[package]
name = "ndef-app"
version = "0.1.0"
authors = ["Conor Patrick <conor@solokeys.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7"

apdu-dispatch = { git = "https://github.com/All-Your-Locks-Are-Belong-To-Us/apdu-dispatch", rev = "b50d7a8abfa83bc3136a51d5a051b70f5f437e61" }
iso7816 = { git = "https://github.com/ycrypto/iso7816" }
