[package]
name = "nfc-device"
version = "0.0.1"
authors = ["Conor Patrick <conor@solokeys.com>"]
edition = "2018"

[dependencies]
delog = "0.1.0"
embedded-time = "0.12"
heapless = "0.7"
nb = "1"

apdu-dispatch = { git = "https://github.com/All-Your-Locks-Are-Belong-To-Us/apdu-dispatch", rev = "b50d7a8abfa83bc3136a51d5a051b70f5f437e61" }
iso7816 = { git = "https://github.com/ycrypto/iso7816" }
interchange = "0.2.1"

[features]
default = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
