[package]
name = "usbd-ctaphid"
version = "0.0.0-unreleased"
authors = ["Nicolas Stalder <n@stalder.io>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
embedded-time = "0.12"
delog = "0.1.0"
heapless = "0.7"
heapless-bytes = "0.3"
interchange = "0.2.0"
serde = { version = "1.0", default-features = false }
usb-device = "0.2.3"

ctaphid-dispatch = { git = "https://github.com/All-Your-Locks-Are-Belong-To-Us/ctaphid-dispatch" }
ctap-types = { git = "https://github.com/All-Your-Locks-Are-Belong-To-Us/ctap-types", rev = "03581bab46df23d8acb5fcfb8d74db6626753394" }

[features]
default = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
