[package]
name = "solo-pc"
version = "0.1.0"
authors = [
    "Nicolas Stalder <n@stalder.io>",
    "Conor Patrick <conor@solokeys.com>",
]
edition = "2018"

[dependencies]
chacha20 = { version = "0.7", features = ["rng"] }
delog = "0.1.0"
embedded-hal = { version = "0.2", features = ["unproven"] }
generic-array = "0.14.3"
heapless = "0.6"
interchange = "0.2.0"
nb = "1"

admin-app = { git = "https://github.com/All-Your-Locks-Are-Belong-To-Us/admin-app", optional = true, rev = "83f8da5431aae0cc340c0f6c4a4aae6080f99392" }
apdu-dispatch = { git = "https://github.com/solokeys/apdu-dispatch", features = [
    "std",
] }
ctap-types = { git = "https://github.com/All-Your-Locks-Are-Belong-To-Us/ctap-types", rev = "d27021ba855a5fbb7e5ac46a2db7e8eeb56bc5aa" }
ctaphid-dispatch = { git = "https://github.com/All-Your-Locks-Are-Belong-To-Us/ctaphid-dispatch", features = [
    "std",
] }
fido-authenticator = { git = "https://github.com/All-Your-Locks-Are-Belong-To-Us/fido-authenticator", optional = true, rev = "ede8798f4735f94445babf2055d2ec9769145582" }
piv-authenticator = { git = "https://github.com/solokeys/piv-authenticator" }
trussed = { git = "https://github.com/trussed-dev/trussed", features = [
    "clients-3",
] }

# components
usbd-ccid = { path = "../../components/usbd-ccid" }
usbd-ctaphid = { path = "../../components/usbd-ctaphid" }
nfc-device = { path = "./../../components/nfc-device" }
ndef-app = { path = "./../../components/ndef-app" }
dispatch-fido = { path = "./../../components/dispatch-fido" }

# storage
littlefs2 = "0.3.1"

[features]
default = []

# Use to auto-succeed every user presence check
no-buttons = []

# Reconfigure the NFC chip in any case
reconfigure-nfc = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []

# patch dependencies like so to test local changes

[profile.release]
codegen-units = 1
opt-level = "z"
incremental = false
debug = true
